--- a/css/style.css
+++ b/css/style.css
@@ -23,7 +23,7 @@ ul {
   display: grid;
   border: red solid 1px;
   height: 100vh;
-  grid-template: 1fr 3fr 3fr / 1fr 1fr 1fr 1fr;
+  grid-template: 1fr 3fr 3fr / 1fr 2fr 2fr 2fr;
 }
 
 .sidebar {
@@ -45,13 +45,61 @@ a:hover {
 
 .header {
   border: green solid 1px;
-  background-color: rgb(181, 207, 181);
+  background-color: rgb(221, 221, 221);
   grid-area: 1 / 2 / 2 / 5;
+
+  
 }
 
+.header-list {
+  display: grid;
+  grid-template: 12vh 12vh / 1fr 1fr;
+  padding: 0;
+}
+
+.nav-div {
+  padding: 6px;
+}
+
+.nav-div-1 {
+  grid-area: 1 / 1 / 2 / 2;
+}
+
+.nav-div-2 {
+  display: flex;
+  justify-content: flex-end;
+  align-items: center;
+}
+
+.nav-div-2 a {
+  color: grey;
+}
+
+.nav-div i {
+  font-size: x-large;
+}
+
+.nav-div-3 {
+  grid-area: 2 / 2 / 3 / 3;
+  display: flex;
+  justify-content: flex-end;
+  align-items: center;
+}
+
+.nav-div-3 a {
+  padding: 8px;
+  margin: 3px;
+  border-radius: 25px;
+  background-color: rgb(34, 138, 241);
+  color: white;
+  transition: 0.2s;
+}
+
+.nav-div-3 a:hover {
+  filter: brightness(80%);
+}
 
 .header ul {
-  display: flex;
   list-style-type: none;
   margin-top: 15px;
   width: 100%;
