--- a/css/style.css
+++ b/css/style.css
@@ -22,8 +22,8 @@ ul {
 .wrapper {
   display: grid;
   border: red solid 1px;
-  height: 100vh;
-  grid-template: 1fr 3fr 3fr / 1fr 2fr 2fr 2fr;
+  
+  grid-template: max-content calc(100vh) / 1fr 1fr 1fr 1fr
 }
 
 .sidebar {
@@ -31,6 +31,20 @@ ul {
   background-color: rgb(71, 71, 78);
   grid-area: 1 / 1 / 4 / 2;
   color: var(--light-text);
+  
+  display: grid;
+  grid-auto-rows: max-content;
+  grid-template: max-content / max-content;
+}
+
+#sidebar-title {
+  grid-area: 1 / 1 / 2 / 2;
+}
+
+.sidebar ul {
+  padding: 0;
+
+  grid-area: 2 / 1 / 3 / 2;
 }
 
 a {
@@ -48,12 +62,11 @@ a:hover {
   background-color: rgb(221, 221, 221);
   grid-area: 1 / 2 / 2 / 5;
 
-  
 }
 
 .header-list {
   display: grid;
-  grid-template: 12vh 12vh / 1fr 1fr;
+  grid-template: 10vh 10vh / 1fr 1fr;
   padding: 0;
 }
 
@@ -73,6 +86,12 @@ a:hover {
 
 .nav-div-2 a {
   color: grey;
+}
+
+.nav-div-2 img {
+  height: 40px;
+  width: 40px;
+  border-radius: 25px;
 }
 
 .nav-div i {
@@ -125,8 +144,40 @@ a:hover {
   outline: none;
 }
 
-.main-content {
+.main-content-container {
   border: pink solid 1px;
   background-color: rgb(249, 203, 211);
-  grid-area: 2 / 2 / 4 / 5
+  grid-area: 2 / 2 / 4 / 5;
+
+  display: grid;
+  grid-template: max-content / 1fr 300px;
+  
+}
+
+.projects {
+  border: blue solid 1px;
+  background-color: rgba(0, 0, 255, 0.294);
+  
+  display: grid;
+  grid-template-columns: repeat(auto-fit, minmax(300px, 1fr));
+  grid-template-rows: max-content;
+  gap: 12px;
+  margin: 6px;
+
+  justify-items: center;
+}
+
+.project-panel {
+  background-color: rgba(255, 0, 0, 0.368);
+  height: 350px;
+  width: minmax(300px, 330px);
+  border-radius: 15px;
+
+}
+
+.announcements {
+  border: rgb(0, 255, 30) solid 1px;
+  background-color: rgba(0, 255, 30, 0.303);
+
+  grid-template-columns: 1fr;
 }
